style: adjust spacing + fix width of inputs on start and update group pages

--- a/frontend/src/components/UpdateGroupPage/UpdateGroupPage.css
+++ b/frontend/src/components/UpdateGroupPage/UpdateGroupPage.css
@@ -9,7 +9,7 @@
 	padding: 1rem;
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 0.8rem;
 }
 
 .update-group > :last-child {
@@ -31,7 +31,18 @@
 
 .update-group input,
 textarea {
-	border: 2px solid black;
-	box-shadow: 1px 1px hsla(0, 0%, 0%, 1);
+	width: 372px;
+	border: 1px solid black;
+	border-radius: 5px;
+	box-shadow: 1px 0px 2px hsla(0, 0%, 0%, 0.3);
 	padding: 0.2rem 0.3rem;
+}
+.update-group__group-type-container :first-child,
+.update-group__group-status-container :first-child {
+	margin-bottom: 0.2rem;
+}
+
+.update-group__heading > h3 {
+	font-size: 10px;
+	color: rgb(122, 122, 122);
 }
